--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>B-Store</title>
+    <title>Sushi-store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
